src/objects/QPMS__Excel_Import__mdt.object
<CustomObject>
    <fields>
        <fullName>QPMS__API_Name__c</fullName>
        <label>API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Category__c</fullName>
        <label>Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Excel Import</label>
    <pluralLabel>Excel Imports</pluralLabel>
</CustomObject>